force-app/main/default/objects/ForecastOutput52Week__c/ForecastOutput52Week__c.object-meta.xml
<CustomObject>
    <label>Forecast Output</label>
    <nameField>
        <displayFormat>F52-{0000000000}</displayFormat>
        <label>Forecast Output - 52 Week Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Output</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>