force-app/main/default/objects/ForecastOutput52Week__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OEM Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Forecast_Output_52_Weeks</relationshipName>
    <type>Lookup</type>
</CustomField>