force-app/main/default/objects/ForecastOutput52Week__c/fields/application__c.field-meta.xml
<CustomField>
    <fullName>application__c</fullName>
    <label>Application</label>
    <length>120</length>
    <type>Text</type>
</CustomField>