force-app/main/default/objects/ForecastOutput52Week__c/fields/brandCustomer__c.field-meta.xml
<CustomField>
    <fullName>brandCustomer__c</fullName>
    <label>Brand Customer</label>
    <length>120</length>
    <type>Text</type>
</CustomField>