force-app/main/default/objects/ForecastOutput52Week__c/fields/comments__c.field-meta.xml
<CustomField>
    <fullName>comments__c</fullName>
    <label>Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>