force-app/main/default/objects/ForecastOutput52Week__c/fields/coverScreenSize__c.field-meta.xml
<CustomField>
    <fullName>coverScreenSize__c</fullName>
    <label>Cover Screen Size (inches)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>