force-app/main/default/objects/ForecastOutput52Week__c/fields/currentActualProductMarketingName__c.field-meta.xml
<CustomField>
    <fullName>currentActualProductMarketingName__c</fullName>
    <formula>opportunity__r.actualProductMarketingName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Actual Product Marketing Name</label>
    <type>Text</type>
</CustomField>