force-app/main/default/objects/ForecastOutput52Week__c/fields/currentApplication__c.field-meta.xml
<CustomField>
    <fullName>currentApplication__c</fullName>
    <formula>text( opportunity__r.application__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Application</label>
    <type>Text</type>
</CustomField>