force-app/main/default/objects/ForecastOutput52Week__c/fields/currentDeviceCategory__c.field-meta.xml
<CustomField>
    <fullName>currentDeviceCategory__c</fullName>
    <formula>opportunity__r.deviceCategory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Device Category</label>
    <type>Text</type>
</CustomField>