force-app/main/default/objects/ForecastOutput52Week__c/fields/currentEstimatedCoverSheetScreenSize__c.field-meta.xml
<CustomField>
    <fullName>currentEstimatedCoverSheetScreenSize__c</fullName>
    <formula>opportunity__r.estimatedCoverSheetScreenSize__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Screen Size (Inches)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>