force-app/main/default/objects/ForecastOutput52Week__c/fields/currentEstimatedLaunchDate__c.field-meta.xml
<CustomField>
    <fullName>currentEstimatedLaunchDate__c</fullName>
    <formula>opportunity__r.estimatedLaunchDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Estimated Launch Date</label>
    <type>Date</type>
</CustomField>