force-app/main/default/objects/ForecastOutput52Week__c/fields/currentFinalFinishedGlassPartThickness__c.field-meta.xml
<CustomField>
    <fullName>currentFinalFinishedGlassPartThickness__c</fullName>
    <formula>text( opportunity__r.finalFinishedGlassPartThickness__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Final Finished Glass Part Thickn</label>
    <type>Text</type>
</CustomField>