force-app/main/default/objects/ForecastOutput52Week__c/fields/currentGlasCurvature__c.field-meta.xml
<CustomField>
    <fullName>currentGlasCurvature__c</fullName>
    <formula>text( opportunity__r.specialShapes__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Glass Curvature</label>
    <type>Text</type>
</CustomField>