force-app/main/default/objects/ForecastOutput52Week__c/fields/currentGlassAttributes__c.field-meta.xml
<CustomField>
    <fullName>currentGlassAttributes__c</fullName>
    <formula>currentGlassComposition__c  + &quot;; &quot; + currentGlassThickness__c + &quot;mm - &quot; +  currentGlasCurvature__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Glass Attributes</label>
    <type>Text</type>
</CustomField>