force-app/main/default/objects/ForecastOutput52Week__c/fields/currentGlassComposition__c.field-meta.xml
<CustomField>
    <fullName>currentGlassComposition__c</fullName>
    <formula>text(opportunity__r.primaryGlassComposition__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Glass Composition</label>
    <type>Text</type>
</CustomField>