force-app/main/default/objects/ForecastOutput52Week__c/fields/currentGlassMassProductionStartDate__c.field-meta.xml
<CustomField>
    <fullName>currentGlassMassProductionStartDate__c</fullName>
    <formula>opportunity__r.Start_of_Production__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Glass Mass Production Start Date</label>
    <type>Date</type>
</CustomField>