force-app/main/default/objects/ForecastOutput52Week__c/fields/currentGlassSelectionDate__c.field-meta.xml
<CustomField>
    <fullName>currentGlassSelectionDate__c</fullName>
    <formula>opportunity__r.glassSelectionDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Glass Selection Date</label>
    <type>Date</type>
</CustomField>