force-app/main/default/objects/ForecastOutput52Week__c/fields/currentGlassThickness__c.field-meta.xml
<CustomField>
    <fullName>currentGlassThickness__c</fullName>
    <formula>text( opportunity__r.glassThickness__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Glass Thickness</label>
    <type>Text</type>
</CustomField>