force-app/main/default/objects/ForecastOutput52Week__c/fields/currentMarketSegment__c.field-meta.xml
<CustomField>
    <fullName>currentMarketSegment__c</fullName>
    <formula>text( opportunity__r.marketSegment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Market Segment</label>
    <type>Text</type>
</CustomField>