force-app/main/default/objects/ForecastOutput52Week__c/fields/currentMarketSubSegment__c.field-meta.xml
<CustomField>
    <fullName>currentMarketSubSegment__c</fullName>
    <formula>text( opportunity__r.marketSubSegment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Market Sub-Segment</label>
    <type>Text</type>
</CustomField>