force-app/main/default/objects/ForecastOutput52Week__c/fields/currentMixAGC__c.field-meta.xml
<CustomField>
    <fullName>currentMixAGC__c</fullName>
    <formula>opportunity__r.agcPercent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current AGC %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>