force-app/main/default/objects/ForecastOutput52Week__c/fields/currentMixCompetitiveGlasses__c.field-meta.xml
<CustomField>
    <fullName>currentMixCompetitiveGlasses__c</fullName>
    <formula>IF(INCLUDES( opportunity__r.competitiveGlasses__c , &quot;AGC – DT&quot;), &quot;AGC – DT; &quot;, NULL)  +  
IF(INCLUDES( opportunity__r.competitiveGlasses__c , &quot;AGC – DT Pro&quot;), &quot;AGC – DT Pro; &quot;, NULL)  + 
IF(INCLUDES( opportunity__r.competitiveGlasses__c , &quot;AGC – DT Star I&quot;), &quot;AGC – DT Star I; &quot;, NULL)  +
IF(INCLUDES( opportunity__r.competitiveGlasses__c , &quot;AGC – DT Star II&quot;), &quot;AGC – DT Star II; &quot;, NULL)  +  
IF(INCLUDES( opportunity__r.competitiveGlasses__c , &quot;Schott – Xensation&quot;), &quot;Schott – Xensation; &quot;, NULL)  + 
IF(INCLUDES( opportunity__r.competitiveGlasses__c , &quot;Schott – Xensation 3D&quot;), &quot;Schott – Xensation 3D; &quot;, NULL)  + 
IF(INCLUDES( opportunity__r.competitiveGlasses__c , &quot;Schott – Xensation UP&quot;), &quot;Schott – Xensation UP; &quot;, NULL)  + 
IF(INCLUDES( opportunity__r.competitiveGlasses__c , &quot;NEG – T2X-0&quot;), &quot;NEG – T2X-0; &quot;, NULL)  + 
IF(INCLUDES( opportunity__r.competitiveGlasses__c , &quot;NEG – T2X-1 (Dinorex)&quot;), &quot;NEG – T2X-1 (Dinorex); &quot;, NULL)  + 
IF(INCLUDES( opportunity__r.competitiveGlasses__c , &quot;HBDX – Panda King Glass&quot;), &quot;HBDX – Panda King Glass; &quot;, NULL)  + 
IF(INCLUDES( opportunity__r.competitiveGlasses__c , &quot;HBDX – Panda II&quot;), &quot;HBDX – Panda II; &quot;, NULL)  + 
IF(INCLUDES( opportunity__r.competitiveGlasses__c , &quot;Irico – CG-01&quot;), &quot;Irico – CG-01; &quot;, NULL)  + 
IF(INCLUDES( opportunity__r.competitiveGlasses__c , &quot;Irico – CG-21 (GL Kailly)&quot;), &quot;Irico – CG-21 (GL Kailly); &quot;, NULL)  + 
IF(INCLUDES( opportunity__r.competitiveGlasses__c , &quot;Irico – Kailly 6&quot;), &quot;Irico – Kailly 6; &quot;, NULL)  + 
IF(INCLUDES( opportunity__r.competitiveGlasses__c , &quot;KMTC – Techstone&quot;), &quot;KMTC – Techstone; &quot;, NULL)  + 
IF(INCLUDES( opportunity__r.competitiveGlasses__c , &quot;KMTC – Techstone C+&quot;), &quot;KMTC – Techstone C+; &quot;, NULL)  + 
IF(INCLUDES( opportunity__r.competitiveGlasses__c , &quot;CSG – Lo/Med/Hi Al-Si&quot;), &quot;CSG – Lo/Med/Hi Al-Si; &quot;, NULL)  + 
IF(INCLUDES( opportunity__r.competitiveGlasses__c , &quot;NSG – Glanova&quot;), &quot;NSG – Glanova; &quot;, NULL)  + 
IF(INCLUDES( opportunity__r.competitiveGlasses__c , &quot;NSG – Glanova EX&quot;), &quot;NSG – Glanova EX; &quot;, NULL)  + 
IF(INCLUDES( opportunity__r.competitiveGlasses__c , &quot;SLG&quot;), &quot;SLG;&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Competitive Glasses</label>
    <type>Text</type>
</CustomField>