force-app/main/default/objects/ForecastOutput52Week__c/fields/currentMixCompetitiveMaterial__c.field-meta.xml
<CustomField>
    <fullName>currentMixCompetitiveMaterial__c</fullName>
    <formula>IF(INCLUDES( opportunity__r.Competitive_Material__c , &quot;Plastic&quot;), &quot;Plastic; &quot;, NULL)  + 
IF(INCLUDES( opportunity__r.Competitive_Material__c , &quot;Glastic&quot;), &quot;Glastic; &quot;, NULL)  +  
IF(INCLUDES( opportunity__r.Competitive_Material__c , &quot;Metal&quot;), &quot;Metal; &quot;, NULL)  + 
IF(INCLUDES( opportunity__r.Competitive_Material__c , &quot;Ceramic&quot;), &quot;Ceramic;&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Competitive Material</label>
    <type>Text</type>
</CustomField>