force-app/main/default/objects/ForecastOutput52Week__c/fields/currentMixGorillaGlass__c.field-meta.xml
<CustomField>
    <fullName>currentMixGorillaGlass__c</fullName>
    <formula>opportunity__r.gorillaGlassPercent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Gorilla Glass %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>