force-app/main/default/objects/ForecastOutput52Week__c/fields/currentMixNEG__c.field-meta.xml
<CustomField>
    <fullName>currentMixNEG__c</fullName>
    <formula>opportunity__r.negPercent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current NEG %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>