force-app/main/default/objects/ForecastOutput52Week__c/fields/currentMixOther__c.field-meta.xml
<CustomField>
    <fullName>currentMixOther__c</fullName>
    <formula>opportunity__r.otherPercent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Other %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>