force-app/main/default/objects/ForecastOutput52Week__c/fields/currentMixPanda__c.field-meta.xml
<CustomField>
    <fullName>currentMixPanda__c</fullName>
    <formula>opportunity__r.pandaPercent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Panda %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>