force-app/main/default/objects/ForecastOutput52Week__c/fields/currentMixSchott__c.field-meta.xml
<CustomField>
    <fullName>currentMixSchott__c</fullName>
    <formula>opportunity__r.schottPercent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Schott %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>