force-app/main/default/objects/ForecastOutput52Week__c/fields/currentOpportunityAccountName__c.field-meta.xml
<CustomField>
    <fullName>currentOpportunityAccountName__c</fullName>
    <formula>opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Opportunity Account Name</label>
    <type>Text</type>
</CustomField>