force-app/main/default/objects/ForecastOutput52Week__c/fields/currentOpportunityAge__c.field-meta.xml
<CustomField>
    <fullName>currentOpportunityAge__c</fullName>
    <formula>opportunity__r.age__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Opportunity Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>