force-app/main/default/objects/ForecastOutput52Week__c/fields/currentOpportunityAmount__c.field-meta.xml
<CustomField>
    <fullName>currentOpportunityAmount__c</fullName>
    <formula>opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>