force-app/main/default/objects/ForecastOutput52Week__c/fields/currentOpportunityCloseDate__c.field-meta.xml
<CustomField>
    <fullName>currentOpportunityCloseDate__c</fullName>
    <formula>opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Opportunity Close Date</label>
    <type>Date</type>
</CustomField>