force-app/main/default/objects/ForecastOutput52Week__c/fields/currentOpportunityName__c.field-meta.xml
<CustomField>
    <fullName>currentOpportunityName__c</fullName>
    <formula>opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Opportunity Name</label>
    <type>Text</type>
</CustomField>