force-app/main/default/objects/ForecastOutput52Week__c/fields/currentOpportunityStage__c.field-meta.xml
<CustomField>
    <fullName>currentOpportunityStage__c</fullName>
    <formula>text(opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Opportunity Stage</label>
    <type>Text</type>
</CustomField>