force-app/main/default/objects/ForecastOutput52Week__c/fields/currentOpportunityTotalQuantity__c.field-meta.xml
<CustomField>
    <fullName>currentOpportunityTotalQuantity__c</fullName>
    <formula>opportunity__r.totalQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Opportunity Total Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>