force-app/main/default/objects/ForecastOutput52Week__c/fields/currentProductCode__c.field-meta.xml
<CustomField>
    <fullName>currentProductCode__c</fullName>
    <formula>specification__r.productCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Specification Product Code</label>
    <type>Text</type>
</CustomField>