force-app/main/default/objects/ForecastOutput52Week__c/fields/currentProductModelOrProgramName__c.field-meta.xml
<CustomField>
    <fullName>currentProductModelOrProgramName__c</fullName>
    <formula>opportunity__r.customerProductModelName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Product Model or Program Name</label>
    <type>Text</type>
</CustomField>