force-app/main/default/objects/ForecastOutput52Week__c/fields/currentProductSegmentation__c.field-meta.xml
<CustomField>
    <fullName>currentProductSegmentation__c</fullName>
    <formula>text( opportunity__r.productSegmentation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Product Segmentation</label>
    <type>Text</type>
</CustomField>