force-app/main/default/objects/ForecastOutput52Week__c/fields/currentRegion__c.field-meta.xml
<CustomField>
    <fullName>currentRegion__c</fullName>
    <formula>TEXT(opportunity__r.region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Region</label>
    <type>Text</type>
</CustomField>