force-app/main/default/objects/ForecastOutput52Week__c/fields/currentScreenSizeSqFt__c.field-meta.xml
<CustomField>
    <fullName>currentScreenSizeSqFt__c</fullName>
    <formula>opportunity__r.screenSizeSqFt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Screen Size (SqFt)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>