force-app/main/default/objects/ForecastOutput52Week__c/fields/date__c.field-meta.xml
<CustomField>
    <fullName>date__c</fullName>
    <label>Forecast Date</label>
    <type>Date</type>
</CustomField>