force-app/main/default/objects/ForecastOutput52Week__c/fields/deviceCategory__c.field-meta.xml
<CustomField>
    <fullName>deviceCategory__c</fullName>
    <label>Device Category</label>
    <length>120</length>
    <type>Text</type>
</CustomField>