force-app/main/default/objects/ForecastOutput52Week__c/fields/finalFinishedGlassPartThickness__c.field-meta.xml
<CustomField>
    <fullName>finalFinishedGlassPartThickness__c</fullName>
    <label>Final Finished Glass Part Thickness</label>
    <length>120</length>
    <type>Text</type>
</CustomField>