force-app/main/default/objects/ForecastOutput52Week__c/fields/finisherAccount__c.field-meta.xml
<CustomField>
    <fullName>finisherAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finisher Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Forecast Output (Finisher Account)</relationshipLabel>
    <relationshipName>Forecast_Output</relationshipName>
    <type>Lookup</type>
</CustomField>