force-app/main/default/objects/ForecastOutput52Week__c/fields/finisherMix__c.field-meta.xml
<CustomField>
    <fullName>finisherMix__c</fullName>
    <label>Finisher Mix %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>