force-app/main/default/objects/ForecastOutput52Week__c/fields/finisherOwner__c.field-meta.xml
<CustomField>
    <fullName>finisherOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finisher Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Forecast_Output</relationshipName>
    <type>Lookup</type>
</CustomField>