force-app/main/default/objects/ForecastOutput52Week__c/fields/finisherYield__c.field-meta.xml
<CustomField>
    <fullName>finisherYield__c</fullName>
    <label>Finisher Yield %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>