force-app/main/default/objects/ForecastOutput52Week__c/fields/GG_forecastCountPerMonth__c.field-meta.xml
<CustomField>
    <fullName>GG_forecastCountPerMonth__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Forecast Count Per Month</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>