force-app/main/default/objects/ForecastOutput52Week__c/fields/GG_forecastLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>GG_forecastLastModifiedDate__c</fullName>
    <label>Forecast Last Modified Date</label>
    <type>Date</type>
</CustomField>