force-app/main/default/objects/ForecastOutput52Week__c/fields/glassAttributes__c.field-meta.xml
<CustomField>
    <fullName>glassAttributes__c</fullName>
    <formula>glassComposition__c + &quot;; &quot; + text(thickness__c) + &quot;mm - &quot; + glassCurvature__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Glass Attributes</label>
    <type>Text</type>
</CustomField>