force-app/main/default/objects/ForecastOutput52Week__c/fields/glassComposition__c.field-meta.xml
<CustomField>
    <fullName>glassComposition__c</fullName>
    <label>Glass Composition</label>
    <length>120</length>
    <type>Text</type>
</CustomField>