force-app/main/default/objects/ForecastOutput52Week__c/fields/glassCurvature__c.field-meta.xml
<CustomField>
    <fullName>glassCurvature__c</fullName>
    <label>Glass Curvature</label>
    <length>120</length>
    <type>Text</type>
</CustomField>