force-app/main/default/objects/ForecastOutput52Week__c/fields/length__c.field-meta.xml
<CustomField>
    <fullName>length__c</fullName>
    <label>Length</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>