force-app/main/default/objects/ForecastOutput52Week__c/fields/LifeCycle_Volume__c.field-meta.xml
<CustomField>
    <fullName>LifeCycle_Volume__c</fullName>
    <formula>opportunity__r.Lifecycle_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LifeCycle Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>