force-app/main/default/objects/ForecastOutput52Week__c/fields/m10Date__c.field-meta.xml
<CustomField>
    <fullName>m10Date__c</fullName>
    <label>M10 Date</label>
    <type>Date</type>
</CustomField>