force-app/main/default/objects/ForecastOutput52Week__c/fields/m10GlassSqFt__c.field-meta.xml
<CustomField>
    <fullName>m10GlassSqFt__c</fullName>
    <formula>IF(OR( opportunity__r.screenSizeSqFt__c = 0, finisherYield__c = 0), 0, m10Qty__c * opportunity__r.screenSizeSqFt__c / finisherYield__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GG M10 Glass SqFt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>