force-app/main/default/objects/ForecastOutput52Week__c/fields/m10Label__c.field-meta.xml
<CustomField>
    <fullName>m10Label__c</fullName>
    <label>M10 Label</label>
    <length>120</length>
    <type>Text</type>
</CustomField>