force-app/main/default/objects/ForecastOutput52Week__c/fields/m10Rev__c.field-meta.xml
<CustomField>
    <fullName>m10Rev__c</fullName>
    <label>M10 Rev</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>