force-app/main/default/objects/ForecastOutput52Week__c/fields/m10UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>m10UnitPrice__c</fullName>
    <label>M10 Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>