force-app/main/default/objects/ForecastOutput52Week__c/fields/m11Date__c.field-meta.xml
<CustomField>
    <fullName>m11Date__c</fullName>
    <label>M11 Date</label>
    <type>Date</type>
</CustomField>