force-app/main/default/objects/ForecastOutput52Week__c/fields/m11GlassSqFtDelta__c.field-meta.xml
<CustomField>
    <fullName>m11GlassSqFtDelta__c</fullName>
    <label>M11 Glass SqFt Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>