force-app/main/default/objects/ForecastOutput52Week__c/fields/m11Label__c.field-meta.xml
<CustomField>
    <fullName>m11Label__c</fullName>
    <label>M11 Label</label>
    <length>120</length>
    <type>Text</type>
</CustomField>