force-app/main/default/objects/ForecastOutput52Week__c/fields/m11Qty__c.field-meta.xml
<CustomField>
    <fullName>m11Qty__c</fullName>
    <label>GG M11 Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>