force-app/main/default/objects/ForecastOutput52Week__c/fields/m11QtyDelta__c.field-meta.xml
<CustomField>
    <fullName>m11QtyDelta__c</fullName>
    <label>M11 Qty Delta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>