force-app/main/default/objects/ForecastOutput52Week__c/fields/m11Rev__c.field-meta.xml
<CustomField>
    <fullName>m11Rev__c</fullName>
    <label>M11 Rev</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>