force-app/main/default/objects/ForecastOutput52Week__c/fields/m12Date__c.field-meta.xml
<CustomField>
    <fullName>m12Date__c</fullName>
    <label>M12 Date</label>
    <type>Date</type>
</CustomField>