force-app/main/default/objects/ForecastOutput52Week__c/fields/m12Label__c.field-meta.xml
<CustomField>
    <fullName>m12Label__c</fullName>
    <label>M12 Label</label>
    <length>120</length>
    <type>Text</type>
</CustomField>