force-app/main/default/objects/ForecastOutput52Week__c/fields/m12Qty__c.field-meta.xml
<CustomField>
    <fullName>m12Qty__c</fullName>
    <label>GG M12 Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>