force-app/main/default/objects/ForecastOutput52Week__c/fields/m12Rev__c.field-meta.xml
<CustomField>
    <fullName>m12Rev__c</fullName>
    <label>M12 Rev</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>