force-app/main/default/objects/ForecastOutput52Week__c/fields/m12RevDelta__c.field-meta.xml
<CustomField>
    <fullName>m12RevDelta__c</fullName>
    <label>M12 Rev Delta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>