force-app/main/default/objects/ForecastOutput52Week__c/fields/m12UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>m12UnitPrice__c</fullName>
    <label>M12 Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>