force-app/main/default/objects/ForecastOutput52Week__c/fields/marketSegment__c.field-meta.xml
<CustomField>
    <fullName>marketSegment__c</fullName>
    <label>Market Segment</label>
    <length>120</length>
    <type>Text</type>
</CustomField>