force-app/main/default/objects/ForecastOutput52Week__c/fields/marketSubSegment__c.field-meta.xml
<CustomField>
    <fullName>marketSubSegment__c</fullName>
    <label>Market Sub-Segment</label>
    <length>120</length>
    <type>Text</type>
</CustomField>