force-app/main/default/objects/ForecastOutput52Week__c/fields/massProductionStartDate__c.field-meta.xml
<CustomField>
    <fullName>massProductionStartDate__c</fullName>
    <label>Mass Production Start Date</label>
    <type>Date</type>
</CustomField>