force-app/main/default/objects/ForecastOutput52Week__c/fields/mixAGC__c.field-meta.xml
<CustomField>
    <fullName>mixAGC__c</fullName>
    <label>AGC %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>