force-app/main/default/objects/ForecastOutput52Week__c/fields/mixCompetitiveGlasses__c.field-meta.xml
<CustomField>
    <fullName>mixCompetitiveGlasses__c</fullName>
    <label>Competitive Glasses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>