force-app/main/default/objects/ForecastOutput52Week__c/fields/mixCompetitiveMaterial__c.field-meta.xml
<CustomField>
    <fullName>mixCompetitiveMaterial__c</fullName>
    <label>Competitive Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>