force-app/main/default/objects/ForecastOutput52Week__c/fields/mixGorillaGlass__c.field-meta.xml
<CustomField>
    <fullName>mixGorillaGlass__c</fullName>
    <label>Gorilla Glass %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>