force-app/main/default/objects/ForecastOutput52Week__c/fields/mixNEG__c.field-meta.xml
<CustomField>
    <fullName>mixNEG__c</fullName>
    <label>NEG %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>