force-app/main/default/objects/ForecastOutput52Week__c/fields/mixOther__c.field-meta.xml
<CustomField>
    <fullName>mixOther__c</fullName>
    <label>Other %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>