force-app/main/default/objects/ForecastOutput52Week__c/fields/mixPanda__c.field-meta.xml
<CustomField>
    <fullName>mixPanda__c</fullName>
    <label>Panda %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>