force-app/main/default/objects/ForecastOutput52Week__c/fields/mixSchott__c.field-meta.xml
<CustomField>
    <fullName>mixSchott__c</fullName>
    <label>Schott %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>