force-app/main/default/objects/ForecastOutput52Week__c/fields/modelProgramName__c.field-meta.xml
<CustomField>
    <fullName>modelProgramName__c</fullName>
    <label>Model / Program Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>