force-app/main/default/objects/ForecastOutput52Week__c/fields/monthsInProduction__c.field-meta.xml
<CustomField>
    <fullName>monthsInProduction__c</fullName>
    <label>Months in Production</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>