force-app/main/default/objects/ForecastOutput52Week__c/fields/oemOwenerId__c.field-meta.xml
<CustomField>
    <fullName>oemOwenerId__c</fullName>
    <formula>account__r.Owner.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OEM OwenerId</label>
    <type>Text</type>
</CustomField>