force-app/main/default/objects/ForecastOutput52Week__c/fields/oliForecastCategory__c.field-meta.xml
<CustomField>
    <fullName>oliForecastCategory__c</fullName>
    <label>OLI Forecast Category</label>
    <length>120</length>
    <type>Text</type>
</CustomField>