force-app/main/default/objects/ForecastOutput52Week__c/fields/oliLastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>oliLastModifiedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OLI Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Forecast_Output_52_Weeks1</relationshipName>
    <type>Lookup</type>
</CustomField>