force-app/main/default/objects/ForecastOutput52Week__c/fields/oliLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>oliLastModifiedDate__c</fullName>
    <label>OLI Last Modified Date</label>
    <type>Date</type>
</CustomField>