force-app/main/default/objects/ForecastOutput52Week__c/fields/opportunity__c.field-meta.xml
<CustomField>
    <fullName>opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Forecast_Output_52_Weeks</relationshipName>
    <type>Lookup</type>
</CustomField>