force-app/main/default/objects/ForecastOutput52Week__c/fields/opportunityAge__c.field-meta.xml
<CustomField>
    <fullName>opportunityAge__c</fullName>
    <label>Opportunity Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>