force-app/main/default/objects/ForecastOutput52Week__c/fields/opportunityAmount__c.field-meta.xml
<CustomField>
    <fullName>opportunityAmount__c</fullName>
    <label>Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>