force-app/main/default/objects/ForecastOutput52Week__c/fields/opportunityCloseDate__c.field-meta.xml
<CustomField>
    <fullName>opportunityCloseDate__c</fullName>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>